# engineering

./: .gitignore  PATH_CONFIG_UPDATE.md  pyproject.toml
src/config/: dynamic_prompt.py  path_config.py  prompt_config.py
src/core/: __init__.py  main.py
src/core/optimization/: __init__.py  algorithm4.py  default_production_line.json  optimize.py  plant_simulator01.py
src/docs/: background document.md  input_processing_flow.md  knowledge_base_design.md  plant_simulation_integrated_plan.md  sample library.md
src/generation/: data_writer.py  model_builder.py  plant_simulator.py  simtalk_generator.py  standardization.py
src/utils/: api_utils.py  graph_preprocessor.py  json_utils.py  model_utils.py  time_utils.py
src/visualization/: visualization_confirm.py  visualize.py
