[project]
name = "engineering"
version = "0.1.0"
description = ""
authors = [
    {name = "bruce123-wer",email = "3224507089@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pywin32 (>=311,<312)"
]

[tool.poetry]
packages = [{include = "engineering", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
