[tool.poetry]
name = "engineering"
version = "0.1.0"
description = ""
authors = ["bruce123-wer <3224507089@qq.com>"]
readme = "README.md"
packages = [{ include = "engineering", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
requests = ">=2.32.5"
pywin32 = ">=308"
matplotlib = ">=3.8.0"
networkx = ">=3.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"